2015-08-20  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_file.c (openvas_file_md5sum): New function.

	* base/openvas_file.h: Add function prototype.

	* nasl/nasl_grammar.y (init_nasl_ctx): Cache the md5sum of the verified
	file to check that it wasn't changed on later checks.

2015-08-18  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_global_ctxt.h (naslctxt): Add kb element.

	* nasl/exec.c (exec_nasl_script): Set context kb.

	* nasl/nasl_grammar.y (INCLUDE): Set context kb.
	(init_nasl_ctx): Cache the signature checking result in kb, to prevent
	checking the same nasl script or include file multiple times.

2015-08-14  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_connect): Check for LibSSH version when
	using keytype.

2015-08-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/drop_privileges.c (drop_privileges): Check effective user ID
	instead of user ID when deciding if privileges need to be dropped.

2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_connect): Set SSH_OPTIONS_HOSTKEYS value
	when keytype argument is provided.

2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl_ssh.c (nasl_ssh_get_host_key): Use ssh_get_pubkey() to be
	compatible with older LibSSH versions. Get whole public key.

2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* omp/xml.c (handle_end_element): Fix unused function parameter warning.

2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* osp/osp.c (osp_get_scan): Add scan details parameter.

	* osp/osp.h: Adjust function prototype.

2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* nasl/nasl.c, nasl/smb_interface_stub.c, nasl/wmi_interface_stub.c: Fix
	unused function parameter warnings.

2015-08-13  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/ldap_connect_auth.c (ldap_auth_info_new)